.metadata/.plugins/org.eclipse.cdt.ui/PA_Project_21_22.build.log
23:43:55 **** Incremental Build of configuration Debug for project PA_Project_21_22 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\gestore\\Stampe.o" "..\\src\\gestore\\Stampe.cpp" 
In file included from ..\src\gestore\Stampe.h:16:0,
                 from ..\src\gestore\Stampe.cpp:8:
..\src\gestore\../menu/MenuCompleto.h:33:2: error: 'MenuCompleto::MenuCompleto()' cannot be overloaded
  MenuCompleto();
  ^~~~~~~~~~~~
..\src\gestore\../menu/MenuCompleto.h:31:2: error: with 'MenuCompleto::MenuCompleto()'
  MenuCompleto();
  ^~~~~~~~~~~~

23:43:55 Build Failed. 2 errors, 0 warnings. (took 483ms)

